--- a/src/data/commandfu.ini.in
+++ b/src/data/commandfu.ini.in
@@ -11,10 +11,10 @@ Keywords=command line
 
 
 PageHeader.ForegroundColor = #3eb34f
-PageHeader.Background = gradient:///#3b3b3b/#292929
+PageHeader.Background = color:///#121212
 PageHeader.DividerColor = #004d00
 LogoOverlayColor = #FF8D00
 PreviewButtonColor = #3eb34f
-
-BackgroundColor = #222222
+PageHeader.NavigationBackground = color:///#222222
+BackgroundColor = #101010
 ForegroundColor = #3eb34f
