renameing, and translation keys

--- a/manifest.json.in
+++ b/manifest.json.in
@@ -10,6 +10,6 @@
     },
     "maintainer": "Mateo Salta <mateo_salta@yahoo.com>",
     "name": "commandfu.mateo-salta",
-    "title": "commandfu",
-    "version": "0.6"
+    "title": "Command Line Scope",
+    "version": "0.9"
 }
